[package]
version = "0.2.4"
name = "doitlater"
edition = "2018"
repository = "https://github.com/tyrylu/doitlater"
description = "A simple Redis based background jobs queue."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
chrono = "0.4.23"
cron-parser = "0.7.11"
log = "0.4.17"
redis = "0.23.0"
serde = "1.0.152"
thiserror = "1.0.38"
typetag = "0.2.5"

[[example]]
name = "basics"
