[package]
version = "0.2.7"
name = "doitlater"
edition = "2018"
repository = "https://github.com/tyrylu/doitlater"
description = "A simple Redis based background jobs queue."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
cron-parser = "0.9.0"
chrono = {version="0.4.31", default-features=false, features=["clock"]}
log = "0.4.20"
redis = "0.26.0"
serde = "1.0.188"
thiserror = "1.0.49"
typetag = "0.2.13"

[[example]]
name = "basics"
