[package]
version = "0.3.0"
name = "doitlater"
edition = "2018"
repository = "https://github.com/tyrylu/doitlater"
description = "A simple Redis based background jobs queue."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = {version="2.0.1", features=["serde"]}
cron-parser = "0.10.0"
chrono = {version="0.4.41", default-features=false, features=["clock"]}
log = "0.4.27"
redis = "0.32.5"
serde = "1.0.219"
thiserror = "2.0.16"
typetag = "0.2.20"

[[example]]
name = "basics"
